# pulsecheck

./: .env.example  .gitignore  .railwayignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  deps.py  main.py  status_labels.py  web.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py
app/routers/: __init__.py  auth.py  monitors.py
app/schemas/: __init__.py
app/services/: __init__.py  alerts.py  checker.py  incidents.py  monitors.py  probe_insights.py  retention.py  scheduler.py
app/static/css/: styles.css
app/static/js/: app.js  i18n.js
app/templates/: index.html  status.html
tests/: test_api.py
